--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Rejoins l’aventure !</p>
 
     <div class="buttons">
-      <a class="btn-slice map" href="http://192.168.1.5:8100" target="_blank">Voir la carte</a>
+      <a class="btn-slice map" href="http://192.168.1.5:8100/#world:-80:0:-352:1500:0:0:0:0:perspective" target="_blank">Voir la carte</a>
       <a class="btn-slice modpack" href="modpack.zip" download>Télécharger le Modpack</a>
     </div>
   </div>
