--- a/index.html
+++ b/index.html
@@ -1,20 +1,200 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Serveur Minecraft</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Serveur Minecraft moddé – carte en ligne, modpack et infos." />
+  <style>
+    :root{
+      --bg:#0f1117;
+      --panel:#161a22;
+      --text:#e6e9ef;
+      --muted:#98a2b3;
+      --grad1:#00b894;
+      --grad2:#0096ff;
+      --btn-green-1:#00c98b; --btn-green-2:#00a97a;
+      --btn-orange-1:#ff9f43; --btn-orange-2:#ff7f11;
+      --btn-blue-1:#6c8cff; --btn-blue-2:#4f6fff;
+      --btn-purple-1:#8a63ff; --btn-purple-2:#6f47ff;
+      --ring:rgba(255,255,255,.1);
+      --shadow:0 10px 30px rgba(0,0,0,.25);
+      --radius:18px;
+      --speed:.35s;
+    }
+
+    /* reset minimal */
+    *,*::before,*::after{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
+      color:var(--text);
+      background:radial-gradient(1200px 600px at 70% -10%, #123a7a 0%, transparent 60%) , var(--bg);
+    }
+
+    .container{
+      max-width:1100px;
+      margin-inline:auto;
+      padding:24px;
+    }
+
+    .hero{
+      margin-top:24px;
+      background:linear-gradient(135deg, var(--grad1), var(--grad2));
+      border-radius:24px;
+      padding:38px 28px;
+      box-shadow:var(--shadow);
+      position:relative;
+      overflow:hidden;
+    }
+    .hero::after{
+      content:"";
+      position:absolute; inset:0;
+      background:radial-gradient(700px 250px at -10% 0, rgba(255,255,255,.15), transparent 60%);
+      pointer-events:none;
+    }
+    .title{
+      margin:0 0 6px 0;
+      font-weight:800;
+      letter-spacing:.2px;
+      font-size:clamp(28px, 3.5vw, 44px);
+    }
+    .subtitle{margin:0; color:#eef6ff; opacity:.9}
+
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(12,1fr);
+      gap:18px;
+      margin-top:26px;
+    }
+    .card{
+      grid-column:span 12;
+      background:var(--panel);
+      border:1px solid var(--ring);
+      border-radius:var(--radius);
+      padding:22px;
+      box-shadow:var(--shadow);
+    }
+    @media (min-width:700px){
+      .card--left{grid-column:span 6}
+      .card--right{grid-column:span 6}
+      .stack{justify-content:center}
+    }
+
+    /* ===== Bouton "slice" diagonal, un seul label ===== */
+    .btn-slice{
+      --c1: var(--btn-blue-1);
+      --c2: var(--btn-blue-2);
+      position:relative; display:inline-block;
+      padding:14px 20px 14px 22px;
+      color:white; text-decoration:none; font-weight:700;
+      border-radius:14px;
+      background:linear-gradient(135deg, var(--c1), var(--c2));
+      box-shadow:0 10px 20px rgba(0,0,0,.25);
+      overflow:hidden;
+      transform:translateZ(0);
+      transition:transform var(--speed), box-shadow var(--speed), filter var(--speed);
+      isolation:isolate;
+    }
+    /* tranche diagonale */
+    .btn-slice::before{
+      content:"";
+      position:absolute; inset:-140% -40%;
+      background:linear-gradient(135deg, rgba(255,255,255,.18), rgba(255,255,255,0));
+      transform:skew(-18deg) translateX(-10%);
+      transition:transform .6s ease;
+      z-index:-1;
+    }
+    /* éclat fin au survol */
+    .btn-slice::after{
+      content:"";
+      position:absolute; inset:0;
+      background:linear-gradient(120deg, transparent 40%, rgba(255,255,255,.22) 50%, transparent 60%);
+      transform:translateX(-120%);
+      transition:transform .6s ease;
+      mix-blend-mode:soft-light;
+      z-index:1;
+      pointer-events:none;
+    }
+    .btn-slice:hover{ transform:translateY(-2px); box-shadow:0 14px 26px rgba(0,0,0,.32) }
+    .btn-slice:hover::before{ transform:skew(-18deg) translateX(18%) }
+    .btn-slice:hover::after { transform:translateX(0%) }
+
+    .btn-small{ padding:12px 16px; border-radius:12px; font-weight:700; }
+    .btn-green{ --c1:var(--btn-green-1); --c2:var(--btn-green-2) }
+    .btn-orange{ --c1:var(--btn-orange-1); --c2:var(--btn-orange-2) }
+    .btn-blue{ --c1:var(--btn-blue-1); --c2:var(--btn-blue-2) }
+    .btn-purple{ --c1:var(--btn-purple-1); --c2:var(--btn-purple-2) }
+
+    .stack{ display:flex; flex-wrap:wrap; gap:12px }
+    .muted{ color:var(--muted) }
+    .center{ text-align:center }
+    footer{ color:var(--muted); padding:30px 0 24px; text-align:center }
+    a.simple{ color:#9ec5ff }
+  </style>
+
+  <!-- ⚠️⚠️ REMPLACE ICI TES LIENS ⚠️⚠️ -->
+  <script>
+    // Mets ici tes vraies URL
+    const MAP_URL = "http://192.168.1.5:8100/#worldid=overworld:0:64:0:perspective"; // BlueMap
+    const MODPACK_URL = "https://drive.google.com/file/d/1pBRd7FtJDDwK3YcZLo62jRoOJ4pqH0lB/view?usp=drive_link"; // Google Drive
+    const DISCORD_URL = "https://discord.gg/ton-invite"; // optionnel
+    document.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll("[data-link='map']").forEach(a => a.href = MAP_URL);
+      document.querySelectorAll("[data-link='modpack']").forEach(a => a.href = MODPACK_URL);
+      document.querySelectorAll("[data-link='discord']").forEach(a => a.href = DISCORD_URL);
+    });
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Bienvenue sur le serveur Minecraft</h1>
-    <p>Rejoins l’aventure !</p>
+  <header class="container">
+    <section class="hero">
+      <h1 class="title">Serveur Minecraft</h1>
+      <p class="subtitle">Bienvenue sur notre monde moddé !</p>
+    </section>
+  </header>
 
-    <div class="buttons">
-      <a class="btn-slice map" href="http://192.168.1.5:8100/#world:-80:0:-352:1500:0:0:0:0:perspective" target="_blank">Voir la carte</a>
-      <a class="btn-slice modpack" href="modpack.zip" download>Télécharger le Modpack</a>
+  <main class="container">
+    <div class="grid">
+      <section class="card card--left center">
+        <h2 style="margin-top:0">Carte & Modpack</h2>
+        <p class="muted" style="margin-top:-6px">Explore la carte en ligne et récupère le modpack.</p>
+        <div class="stack center" style="justify-content:center">
+          <a class="btn-slice btn-green" data-link="map" target="_blank" rel="noopener">Voir la Carte</a>
+          <a class="btn-slice btn-orange" data-link="modpack" target="_blank" rel="noopener">Télécharger Modpack</a>
+        </div>
+      </section>
+
+      <section class="card card--right center">
+        <h2 style="margin-top:0">Communauté</h2>
+        <p class="muted" style="margin-top:-6px">Rejoins-nous et lis les infos & règles.</p>
+        <div class="stack center" style="justify-content:center">
+          <a class="btn-slice btn-blue" data-link="discord" target="_blank" rel="noopener">Rejoindre Discord</a>
+          <a class="btn-slice btn-purple" href="#infos">Infos & Règles</a>
+        </div>
+      </section>
+
+      <section id="infos" class="card" style="grid-column:span 12">
+        <h3 style="margin-top:0">Infos & Règles</h3>
+        <ul class="muted" style="margin:0 0 6px 18px">
+          <li>Version : 1.21.1 (NeoForge)</li>
+          <li>Whitelist sur demande (Discord)</li>
+          <li>Respect, fair-play, pas de grief/cheat</li>
+        </ul>
+        <p class="muted">
+          Besoin d’aide pour installer le modpack ? Suis le guide dans le salon #install sur notre
+          <a class="simple" data-link="discord" target="_blank" rel="noopener">Discord</a>.
+        </p>
+      </section>
     </div>
-  </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      © <span id="y"></span> — Serveur Minecraft. Carte par BlueMap.  
+      <script>document.getElementById("y").textContent = new Date().getFullYear()</script>
+    </div>
+  </footer>
 </body>
 </html>
