--- a/index.html
+++ b/index.html
@@ -52,24 +52,21 @@
 </section>
 
 <!-- ==== Infos & Règles (collapsible) ==== -->
-<section id="infos" class="card collapsible">
-  <button class="collapsible__header" type="button" data-toggle="infos">
-    <span>Infos & Règles</span>
-    <svg class="chev" width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M8 10l4 4 4-4" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </button>
+<section id="infos" class="card" style="grid-column:span 12">
+  <h3 style="margin-top:0">Infos & Règles</h3>
 
-  <div class="collapsible__body">
+  <!-- Bloc qui se déplie -->
+  <div class="reveal">
     <ul class="muted" style="margin:0 0 6px 18px">
       <li>Version : 1.21.1 (NeoForge)</li>
       <li>Whitelist sur demande (Discord)</li>
       <li>Respect, fair-play, pas de grief/cheat</li>
     </ul>
     <p class="muted">
-      Besoin d’aide pour installer le modpack ? Suis le guide dans le salon #install sur notre
+      Besoin d’aide pour installer le modpack ? Guide dans #install sur notre
       <a class="simple" data-link="discord" target="_blank" rel="noopener">Discord</a>.
     </p>
   </div>
 </section>
+
 
