--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </section>
 
 <!-- ==== Infos & Règles (collapsible) ==== -->
-<section id="infos" class="card" style="grid-column:span 12">
+<section id="infos" class="card glow" style="grid-column:span 12">
   <h3 style="margin-top:0">Infos & Règles</h3>
 
   <!-- Bloc qui se déplie -->
