--- a/infos.html
+++ b/infos.html
@@ -78,7 +78,30 @@
       <li>Respectez les consignes des admins.</li>
     </ul>
   </section>
-
+  <section>
+  <h2>📦 Mods installés</h2>
+  <ul>
+    <li>Jade & Jade Addons</li>
+    <li>JEI (Just Enough Items)</li>
+    <li>JourneyMap</li>
+    <li>Sodium</li>
+    <li>Sophisticated Backpacks (+ Core & Create Integration)</li>
+    <li>Trading Floor</li>
+    <li>Waystones</li>
+    <li>Architectury</li>
+    <li>Balm</li>
+    <li>BlueMap</li>
+    <li>Chunky</li>
+    <li>Create (+ Dragons Plus, Enchantment Industry)</li>
+    <li>Curios API</li>
+    <li>Distant Horizons</li>
+    <li>FerriteCore</li>
+    <li>FTB Chunks, Library, Teams</li>
+    <li>Inventory Sorter</li>
+    <li>Iris Shaders</li>
+  </ul>
+  <p class="muted">⚙️ Version : <strong>Minecraft 1.21.1 + NeoForge</strong></p>
+  </section>
   <section>
     <h2>❓ FAQ</h2>
     <p><strong>Q :</strong> Quelle version de Minecraft utiliser ?<br>
@@ -92,3 +115,4 @@
   </section>
 </body>
 </html>
+
