--- a/modpack.html
+++ b/modpack.html
@@ -80,5 +80,37 @@
       <li>Rejoignez le serveur avec l’IP : <code>192.168.1.5</code> (ou votre IP publique si ouvert aux amis).</li>
     </ol>
   </section>
+  <section>
+  <h2>📋 Liste des mods inclus</h2>
+  <ul>
+    <li>Jade-1.21.1-NeoForge-15.10.3</li>
+    <li>JadeAddons-1.21.1-NeoForge-6.1.0</li>
+    <li>jei-1.21.1-neoforge-19.22.1.316</li>
+    <li>journeymap-neoforge-1.21.1-6.0.0-beta.52</li>
+    <li>sodium-neoforge-0.6.13+mc1.21.1</li>
+    <li>sophisticatedbackpacks-1.21.1-3.25.2.1338</li>
+    <li>sophisticatedbackpackscreateintegration-1.21.1-0.1.3.13</li>
+    <li>sophisticatedcore-1.21.1-1.3.70.1131</li>
+    <li>trading_floor-3.0.11</li>
+    <li>waystones-neoforge-1.21.1-21.1.22</li>
+    <li>architectury-13.0.8-neoforge</li>
+    <li>balm-neoforge-1.21.1-21.0.49</li>
+    <li>bluemap-5.7-neoforge</li>
+    <li>Chunky-NeoForge-1.4.23</li>
+    <li>create-1.21.1-6.0.6</li>
+    <li>create-dragons-plus-1.8.0</li>
+    <li>create-enchantment-industry-2.2.2</li>
+    <li>curios-neoforge-9.5.1+1.21.1</li>
+    <li>DistantHorizons-2.3.4-b-1.21.1-fabric-neoforge</li>
+    <li>ferritecore-7.0.2-neoforge</li>
+    <li>ftb-chunks-neoforge-2101.1.10</li>
+    <li>ftb-library-neoforge-2101.1.20</li>
+    <li>ftb-teams-neoforge-2101.1.4</li>
+    <li>inventorysorter-1.21-24.0.20</li>
+    <li>iris-neoforge-1.8.12+mc1.21.1</li>
+  </ul>
+</section>
+
 </body>
 </html>
+
