--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="stack center">
     <!-- Fallbacks HTML + data-link pour que app.js puisse surcharger -->
     <a class="btn-slice btn-green"
-       href="http://192.168.1.5:8100/#worldid=overworld:0:64:0:perspective"
+       href="http://80.201.203.20:8100/#world:-48:0:-1140:1500:0:0:0:0:perspective"
        data-link="map" target="_blank" rel="noopener">Voir la Carte</a>
 
     <a class="btn-slice btn-orange"
