--- a/modpack.html
+++ b/modpack.html
@@ -5,112 +5,185 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Télécharger le Modpack</title>
   <style>
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background:#0d1117;
-      color:#fff;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding:40px 20px;
+    :root{
+      --bg:#0d1117; --panel:#161b22; --text:#fff; --muted:#9aa4b2;
+      --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444;
+      --grad1:#6c8cff; --grad2:#4f6fff; --radius:16px;
     }
-    h1{ font-size:2rem; margin-bottom:10px; }
-    p{ opacity:.8; margin-bottom:20px; }
+    *{box-sizing:border-box}
+    body{margin:0;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial;background:var(--bg);color:var(--text)}
+    .wrap{max-width:1100px;margin:auto;padding:32px 20px}
+    h1{margin:0 0 6px;font-size:clamp(24px,3.5vw,34px)}
+    p.lead{margin:0 0 18px;color:#dbe7ff;opacity:.9}
+    a.btn{display:inline-block;padding:14px 20px;border-radius:12px;text-decoration:none;font-weight:800;color:#fff;background:linear-gradient(135deg,#6c8cff,#4f6fff);box-shadow:0 10px 22px rgba(0,0,0,.25)}
+    .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:18px;margin-top:22px}
+    .card{grid-column:span 12;background:var(--panel);border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);padding:20px;position:relative;box-shadow:0 10px 26px rgba(0,0,0,.25)}
+    @media(min-width:780px){.card{grid-column:span 4}}
+    .card h3{margin:0 0 8px}
+    .card p{margin:0 0 12px;color:var(--muted)}
+    .card ul{margin:8px 0 14px 18px}
+    .download{display:flex;gap:10px;flex-wrap:wrap}
+    .download a{padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:700}
+    .primary{background:linear-gradient(135deg,#00c98b,#00a97a);color:#fff}
+    .ghost{background:#0f1420;color:#cdd6e5;border:1px solid rgba(255,255,255,.08)}
+    .ribbon{position:absolute;top:14px;right:14px;background:#10b981;color:#052e1a;font-size:12px;font-weight:900;padding:6px 10px;border-radius:999px;display:none}
+    .card.reco .ribbon{display:inline-block}
+    .specs{margin-top:18px;background:#0f1420;border:1px solid rgba(255,255,255,.06);border-radius:12px;padding:12px}
+    .kv{display:flex;gap:10px;flex-wrap:wrap}
+    .kv span{background:#111827;border:1px solid rgba(255,255,255,.06);border-radius:10px;padding:8px 10px;color:#c9d3e5}
+    .note{color:var(--muted);font-size:.95rem;margin-top:10px}
 
-    .btn-diagonal{
-      --bg: #ff6b00;
-      --bg-dark:#d55900;
-      --text:#fff;
-      position: relative;
-      display: inline-block;
-      text-decoration: none;
-      font: 600 16px/1.1 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      margin:15px 10px;
-      padding:14px 26px;
-      border-radius:12px;
-      overflow: hidden;
-      background: var(--bg);
-      transition: color .3s ease;
-      z-index:0;
-    }
-    .btn-diagonal::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      background: var(--bg-dark);
-      transform: skewX(-20deg) scaleX(0);
-      transform-origin: left;
-      transition: transform .35s ease;
-      z-index:-1;
-    }
-    .btn-diagonal:hover::before{
-      transform: skewX(-20deg) scaleX(1);
-    }
-
-    section{
-      max-width:800px;
-      background:#161b22;
-      padding:20px;
-      border-radius:12px;
-      margin-top:20px;
-      line-height:1.6;
-    }
-    ol{ padding-left:20px; }
+    /* Effet visuel sur le bouton recommandé + note shaders */
+    @keyframes pulseA{0%,100%{transform:translateZ(0) scale(1)}50%{transform:translateZ(0) scale(1.03)}}
+    .pulse{animation:pulseA 2.2s ease-in-out infinite}
+    .note-adv{margin-top:8px;color:#cfe8ff;opacity:.95}
   </style>
 </head>
 <body>
-  <h1>📥 Télécharger le Modpack</h1>
-  <p>Installez facilement tous les mods nécessaires pour rejoindre le serveur</p>
+  <div class="wrap">
+    <h1>📦 Modpack — choix automatique selon ta configuration</h1>
+    <p class="lead">Le site détecte ta RAM, ton CPU et (si possible) ton GPU pour te proposer le meilleur pack. Tu peux évidemment choisir un autre pack.</p>
 
-  <!-- Bouton de téléchargement -->
-  <a class="btn-diagonal" href="modpack.zip" download>⬇️ Télécharger Modpack</a>
+    <div class="grid">
+      <!-- FULL -->
+      <section class="card" id="pack-full">
+        <div class="ribbon">Recommandé</div>
+        <h3>Ultra / Complet</h3>
+        <p>Qualité max : <strong>Iris Shaders</strong>, <strong>Distant Horizons</strong>, tout Create, Sodium, etc.</p>
+        <ul>
+          <li>Pour PC récents (RTX/RX/Arc, 16&nbsp;Go RAM+).</li>
+          <li>Meilleurs graphismes, distance étendue.</li>
+        </ul>
+        <div class="download">
+          <!-- Lien Google Drive direct -->
+          <a class="primary" target="_blank" rel="noopener"
+             href="https://drive.google.com/uc?export=download&id=1taXi1dKF8XrmoRw0HI369bZ8eYcli09o">⬇️ Télécharger (Ultra)</a>
+          <a class="ghost" href="index.html">🏠 Retour</a>
+        </div>
+      </section>
 
-  <!-- Bouton retour -->
-  <a class="btn-diagonal" href="index.html" style="--bg:#5865F2; --bg-dark:#4752c4;">🏠 Retour Accueil</a>
+      <!-- STANDARD -->
+      <section class="card" id="pack-standard">
+        <div class="ribbon">Recommandé</div>
+        <h3>Standard</h3>
+        <p>Équilibré : Sodium + tous les mods de gameplay. Pas de shaders ni Distant Horizons.</p>
+        <ul>
+          <li>Pour la majorité des PC (8&nbsp;Go RAM+, 4&nbsp;cœurs+).</li>
+          <li>Bon FPS et stabilité.</li>
+        </ul>
+        <div class="download">
+          <a class="primary" target="_blank" rel="noopener"
+             href="https://drive.google.com/uc?export=download&id=1_7IdVdeQUumD8QBlYvLPYVOhnq7SfEPs">⬇️ Télécharger (Standard)</a>
+          <a class="ghost" href="index.html">🏠 Retour</a>
+        </div>
+      </section>
 
-  <section>
-    <h2>⚙️ Instructions d’installation</h2>
-    <ol>
-      <li>Téléchargez le fichier <code>modpack.zip</code> avec le bouton ci-dessus.</li>
-      <li>Extrayez son contenu dans votre dossier <code>.minecraft/mods</code>.</li>
-      <li>Utilisez la version <strong>Minecraft 1.21.1 + NeoForge</strong>.</li>
-      <li>Lancez le jeu avec votre launcher (Prism/CurseForge) et choisissez le profil NeoForge.</li>
-      <li>Rejoignez le serveur avec l’IP : <code>192.168.1.5</code> (ou votre IP publique si ouvert aux amis).</li>
-    </ol>
-  </section>
-  <section>
-  <h2>📋 Liste des mods inclus</h2>
-  <ul>
-    <li>Jade-1.21.1-NeoForge-15.10.3</li>
-    <li>JadeAddons-1.21.1-NeoForge-6.1.0</li>
-    <li>jei-1.21.1-neoforge-19.22.1.316</li>
-    <li>journeymap-neoforge-1.21.1-6.0.0-beta.52</li>
-    <li>sodium-neoforge-0.6.13+mc1.21.1</li>
-    <li>sophisticatedbackpacks-1.21.1-3.25.2.1338</li>
-    <li>sophisticatedbackpackscreateintegration-1.21.1-0.1.3.13</li>
-    <li>sophisticatedcore-1.21.1-1.3.70.1131</li>
-    <li>trading_floor-3.0.11</li>
-    <li>waystones-neoforge-1.21.1-21.1.22</li>
-    <li>architectury-13.0.8-neoforge</li>
-    <li>balm-neoforge-1.21.1-21.0.49</li>
-    <li>bluemap-5.7-neoforge</li>
-    <li>Chunky-NeoForge-1.4.23</li>
-    <li>create-1.21.1-6.0.6</li>
-    <li>create-dragons-plus-1.8.0</li>
-    <li>create-enchantment-industry-2.2.2</li>
-    <li>curios-neoforge-9.5.1+1.21.1</li>
-    <li>DistantHorizons-2.3.4-b-1.21.1-fabric-neoforge</li>
-    <li>ferritecore-7.0.2-neoforge</li>
-    <li>ftb-chunks-neoforge-2101.1.10</li>
-    <li>ftb-library-neoforge-2101.1.20</li>
-    <li>ftb-teams-neoforge-2101.1.4</li>
-    <li>inventorysorter-1.21-24.0.20</li>
-    <li>iris-neoforge-1.8.12+mc1.21.1</li>
-  </ul>
-</section>
+      <!-- LITE -->
+      <section class="card" id="pack-lite">
+        <div class="ribbon">Recommandé</div>
+        <h3>Lite</h3>
+        <p>Allégé : retire les mods lourds (ex. Distant Horizons, shaders), garde l’essentiel du serveur.</p>
+        <ul>
+          <li>Pour PC anciens / iGPU (Intel UHD/Iris), 4–8&nbsp;Go RAM.</li>
+          <li>Priorité aux performances.</li>
+        </ul>
+        <div class="download">
+          <a class="primary" target="_blank" rel="noopener"
+             href="https://drive.google.com/uc?export=download&id=141uaX-_9GgfQY6j73H_jc3IwITf8EKz6">⬇️ Télécharger (Lite)</a>
+          <a class="ghost" href="index.html">🏠 Retour</a>
+        </div>
+      </section>
+    </div>
 
+    <!-- SHADERPACK RECOMMANDÉ -->
+    <section class="card" id="shaderpack" style="grid-column:span 12; margin-top:10px">
+      <h3>Shaderpack recommandé — Complementary Shaders: Unbound</h3>
+      <p>Fonctionne avec <strong>Iris</strong>. Télécharge et place le fichier <code>.zip</code> dans
+        <em>shaderpacks/</em> de ton instance (ne pas dézipper), puis active-le en jeu :
+        <em>Options → Vidéo → Shader Packs</em>.</p>
+      <div class="download">
+        <!-- Tu l’as déjà ajouté à la racine du repo -->
+        <a class="primary" href="ComplementaryUnbound_r5.5.1.zip">⬇️ Télécharger le shaderpack</a>
+        <a class="ghost" href="#pack-full">Voir le pack Ultra</a>
+      </div>
+      <p class="note note-adv" id="shader-advice"></p>
+    </section>
+
+    <div class="specs" id="specs">
+      <strong>🔍 Détection locale :</strong>
+      <div class="kv" id="kv"></div>
+      <div class="note">Cette détection est approximative (navigateur) et ne lit aucune donnée privée. Si le choix ne te convient pas, prends un autre pack.</div>
+    </div>
+  </div>
+
+  <script>
+    // --- Lecture des capacités du navigateur ---
+    function getGPUInfo(){
+      try{
+        const canvas = document.createElement('canvas');
+        const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
+        if(!gl) return {renderer:'(WebGL indisponible)'};
+        const dbg = gl.getExtension('WEBGL_debug_renderer_info');
+        const renderer = dbg ? gl.getParameter(dbg.UNMASKED_RENDERER_WEBGL) : gl.getParameter(gl.RENDERER);
+        return {renderer: String(renderer || '').trim()};
+      }catch(e){ return {renderer:'(non détecté)'} }
+    }
+
+    function getPlatform(){
+      const ua = navigator.userAgent || '';
+      if(navigator.userAgentData && navigator.userAgentData.platform) return navigator.userAgentData.platform;
+      if(/Windows/i.test(ua)) return 'Windows';
+      if(/Mac OS/i.test(ua)) return 'macOS';
+      if(/Linux/i.test(ua)) return 'Linux';
+      return 'inconnu';
+    }
+
+    function chooseTier({ram, cores, gpu}){
+      const g = gpu.toLowerCase();
+      const strongGPU = /(rtx|rx\s?[5-9]|arc|rx\s?7|gtx\s?16|radeon\s?vii|apple\s?m[123])/i.test(g);
+      const weakGPU = /(intel\(r\)\s?hd|uhd|iris\s?(plus|xe)?|gt\s?7|940m|mx1|mx2)/i.test(g);
+
+      if((ram>=16 && cores>=8 && !weakGPU) || strongGPU) return 'full';
+      if((ram>=8 && cores>=4) && !weakGPU) return 'standard';
+      return 'lite';
+    }
+
+    function fmtRam(r){ return r ? (r+' Go RAM') : 'RAM inconnue'; }
+
+    document.addEventListener('DOMContentLoaded', ()=>{
+      const ram = Number(navigator.deviceMemory || 0);           // Go
+      const cores = Number(navigator.hardwareConcurrency || 0);  // threads
+      const {renderer} = getGPUInfo();
+      const os = getPlatform();
+
+      const tier = chooseTier({ram, cores, gpu: renderer});
+
+      // UI: badge "Recommandé"
+      const id = tier === 'full' ? 'pack-full' : tier === 'standard' ? 'pack-standard' : 'pack-lite';
+      const card = document.getElementById(id);
+      if(card){ card.classList.add('reco'); }
+      card?.querySelector('.primary')?.classList.add('pulse');
+
+      // Affiche les specs détectées
+      const kv = document.getElementById('kv');
+      const add = (txt)=>{ const s=document.createElement('span'); s.textContent=txt; kv.appendChild(s) };
+      add(fmtRam(ram));
+      add(cores ? (cores+' cœurs (threads)') : 'Cœurs inconnus');
+      add(os);
+      add(renderer);
+
+      // Conseils Shader selon la config détectée
+      const advice = document.getElementById('shader-advice');
+      if (advice){
+        if (tier === 'full'){
+          advice.textContent = "✅ Recommandé : votre pack Ultra inclut déjà Iris. Activez le shaderpack dans le jeu.";
+        } else if (tier === 'standard'){
+          advice.textContent = "⚠️ Optionnel : les shaders peuvent baisser les FPS. Utilisez des presets Low/Medium et pensez à installer Iris (inclus dans le pack Ultra).";
+        } else {
+          advice.textContent = "⛔ Déconseillé : privilégiez le pack Lite sans shaders pour garder des FPS stables.";
+        }
+      }
+    });
+  </script>
 </body>
 </html>
-
