--- a/infos.html
+++ b/infos.html
@@ -90,29 +90,37 @@
     <strong>R :</strong> Téléchargez-le sur la page <a href="modpack.html">Modpack</a>.</p>
   </section>
     <section>
-  <h2>📦 Mods installés</h2>
+  <h2>📦 Mods du serveur & des packs</h2>
+
+  <h3>Dans tous les packs (obligatoires)</h3>
   <ul>
-    <li>Jade & Jade Addons</li>
-    <li>JEI (Just Enough Items)</li>
-    <li>JourneyMap</li>
-    <li>Sodium</li>
-    <li>Sophisticated Backpacks (+ Core & Create Integration)</li>
-    <li>Trading Floor</li>
-    <li>Waystones</li>
-    <li>Architectury</li>
-    <li>Balm</li>
-    <li>BlueMap</li>
-    <li>Chunky</li>
     <li>Create (+ Dragons Plus, Enchantment Industry)</li>
     <li>Curios API</li>
-    <li>Distant Horizons</li>
-    <li>FerriteCore</li>
-    <li>FTB Chunks, Library, Teams</li>
-    <li>Inventory Sorter</li>
-    <li>Iris Shaders</li>
+    <li>JEI, Jade</li>
+    <li>Sodium, FerriteCore, Inventory Sorter</li>
+    <li>Sophisticated Backpacks (+ Core & Create Integration)</li>
+    <li>FTB Chunks, FTB Library, FTB Teams</li>
+    <li>Waystones</li>
+    <li>Architectury, Balm</li>
+    <li>Trading Floor</li>
   </ul>
-  <p class="muted">⚙️ Version : <strong>Minecraft 1.21.1 + NeoForge</strong></p>
-  </section>
+
+  <h3>Selon le pack (optionnels)</h3>
+  <ul>
+    <li><strong>Ultra</strong> : Iris Shaders, Distant Horizons, JourneyMap, Jade Addons</li>
+    <li><strong>Standard</strong> : JourneyMap, Jade Addons</li>
+    <li><strong>Lite</strong> : —</li>
+  </ul>
+
+  <h3>Serveur uniquement (les joueurs n’ont rien à installer)</h3>
+  <ul>
+    <li>BlueMap (carte web)</li>
+    <li>Chunky (pré-génération)</li>
+  </ul>
+
+  <p class="muted">⚙️ Version : <strong>Minecraft 1.21.1 + NeoForge</strong> — Téléchargements sur la page <a href="modpack.html">Modpack</a>.</p>
+</section>
+
 </body>
 </html>
 
