--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
         <h2 style="margin-top:0">Communauté</h2>
         <p class="muted" style="margin-top:-6px">Rejoins-nous et lis les infos & règles.</p>
         <div class="stack center" style="justify-content:center">
-          <a class="btn-slice btn-blue"
-             href="https://discord.gg/ton-invite"
-             data-link="discord" target="_blank" rel="noopener">Rejoindre Discord</a>
+        <a class="btn-slice btn-blue"
+          href="https://discord.gg/8SBNM537uZ"
+          data-link="discord" target="_blank" rel="noopener">Rejoindre Discord</a>
+
           <button class="btn-slice btn-purple" type="button" data-toggle="infos">Infos & Règles</button>
         </div>
       </section>
